--- a/frontend/css/service.css
+++ b/frontend/css/service.css
@@ -1,5 +1,5 @@
 /* In /frontend/css/index.css */
 body {
-    background-color: #f0f8ff; /* Replace with the color you want */
+    background-color:#fff; /* Replace with the color you want */
   }
   
